--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,16 +1,12 @@
-.container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.pdf {
+  height: calc(100% - 64px);
+  overflow: hidden;
+}
 
-  background: url(../../assets/background.jpg) no-repeat center fixed;
-  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  background-size: cover; /* version standardisée */
+.spacer {
+  flex: 1 1 auto;
+}
 
-  .title {
-    color: white;
-    margin: 0;
-    padding: 50px 20px;
-  }
+.next {
+  margin-left: 10px;
 }
